Implement elimination rule and update ShowAPIImpl