@@ -2,8 +2,9 @@
  * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
  * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Class.java to edit this template
  */
+
 package bg.sofia.uni.fmi.mjt.show.date;
-import java.lang.Math;
+
 
 public class DateEvent {
     private static final int TENSION_LEVEL_MIN = 0;
@@ -16,7 +17,7 @@ public class DateEvent {
     public DateEvent(String location, int tensionLevel, int duration) {
         this.location = location;
         this.duration = duration;
-        this.tensionLevel = Math.clamp(tensionLevel, TENSION_LEVEL_MIN, TENSION_LEVEL_MAX);
+        this.tensionLevel = Math.max(TENSION_LEVEL_MIN, Math.min(tensionLevel, TENSION_LEVEL_MAX));    
     }
 
     public String getLocation() {
